--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/seedrandom": "^3.0.8",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "rippleui": "^1.12.1",
@@ -21,5 +22,8 @@
     "tslib": "^2.8.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
+  },
+  "dependencies": {
+    "seedrandom": "^3.0.5"
   }
 }
